Adjust structure parameter passing to match ABI change. 	* config/ia64/ia64.c (ia64_function_arg): Use alignment not size 	when computing offset.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35401 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-31  Jim Wilson  <wilson@cygnus.com>
+
+	* config/ia64/ia64.c (ia64_function_arg): Use alignment not size
+	when computing offset.
+
 Mon Jul 31 20:35:50 2000  Denis Chertykov  <denisc@overta.ru>
 
 	* genpeep.c (main): Handle DEFINE_PEEPHOLE2.
