--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-01  Alexandre Oliva  <aoliva@redhat.com>
+
+	* configure.in (qCXX_FOR_TARGET): Use echo instead of expr.
+
 2000-07-31  Alexandre Oliva  <aoliva@redhat.com>
 
 	* configure.in (qCXX_FOR_TARGET): Quote `&' characters in
