* gcc-c-torture/execute/20000731-2.c: New test. Fix will be applied shortly...
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35403 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 Mon Jul 31 21:14:49 2000  Jeffrey A Law  (law@cygnus.com)
 
+	* gcc-c-torture/execute/20000731-2.c: New test.
+
 	* gcc.c-torture/execute/20000731-1.c: New test.
 	* gcc.c-torture/execute/20000731-1.x: Expected to fail for i?86-*-*.
 
