--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jul 31 22:19:24 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* loop.c (check_dbra_loop): Make change from July 17, 2000 work
+	on targets which need more than one insn for a compare/cbranch
+	operation.
+
 2000-07-31  Jim Wilson  <wilson@cygnus.com>
 
 	* config/ia64/ia64.c (ia64_function_arg): Use alignment not size
