--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Tue Aug  1 12:34:21 MET DST 2000  Jan Hubicka  <jh@suse.cz>
+
+	* loop.c (canonicalize_condition):  Use destination, not source to
+	determine SET's mode.
+
 2000-07-31  Mark Mitchell  <mark@codesourcery.com>
 
 	* flow.c (clear_log_links): Fix typo.
