Finish ABI change started by last patch, this time I tested it. 	* config/ia64/ia64.c (ia64_function_arg): Fix last change.  Verify 	type exists before using it.  Use number of words as alignment 	otherwise. 	(ia64_function_arg_partial_nregs, ia64_function_arg_advance, 	ia64_va_arg): Propagate ia64_function_args changes here.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35413 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2000-08-01  Jim Wilson  <wilson@cygnus.com>
+
+	* config/ia64/ia64.c (ia64_function_arg): Fix last change.  Verify
+	type exists before using it.  Use number of words as alignment
+	otherwise.
+	(ia64_function_arg_partial_nregs, ia64_function_arg_advance,
+	ia64_va_arg): Propagate ia64_function_args changes here.
+
 2000-08-01  Richard Henderson  <rth@cygnus.com>
 
 	* config/elfos.h (ASM_DECLARE_OBJECT_NAME): Care for null DECL.
