--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-02  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* gcc.dg/cpp/macsyntx.c: Fix error regexp.
+
 Mon Jul 31 21:14:49 2000  Jeffrey A Law  (law@cygnus.com)
 
 	* gcc-c-torture/execute/20000731-2.c: New test.
