* i386.md (shift to lea splitter): Use const_int_operand.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35423 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -6488,7 +6488,7 @@
 (define_split
   [(set (match_operand 0 "register_operand" "")
 	(ashift (match_operand 1 "register_operand" "")
-                (match_operand:QI 2 "const248_operand" "")))
+                (match_operand:QI 2 "const_int_operand" "")))
    (clobber (reg:CC 17))]
   "reload_completed
    && true_regnum (operands[0]) != true_regnum (operands[1])"
