--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-02  Kazu Hirata  <kazu@hxi.com>
+
+	* fold-const.c: Fix formatting.
+
 Wed Aug  2 16:26:15 MET DST 2000  Jan Hubicka  <jh@suse.cz>
 
 	* i386.c (legitimate_address_p): Accept other bases than
