* cp-tree.h (DECL_NEEDED_P): Tweak.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35426 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-02  Mark Mitchell  <mark@codesourcery.com>
+
+	* cp-tree.h (DECL_NEEDED_P): Tweak.
+
 2000-07-28  Jason Merrill  <jason@redhat.com>
 
 	* lang-specs.h: Use %i in rule for .ii files.
