* c-common.h: Prototype min_precision and c_build_qualified_type here... 	* c-tree.h: ... not here. 	* errors.h: Prototype fancy_abort.
	* emit-rtl.c (gen_lowpart_common): Move variable 'c' into
	HOST_BITS_PER_WIDE_INT == 64 ifdef block.
	* regrename.c (regrename_optimize): Make control flow explicit.
	(replace_reg_in_block): Initialize reg_use to 0.

	* i386.c (legitimate_address_p): Rename error label to
	report_error to avoid namespace clash.

cp:
	* cp-tree.h: Don't prototype min_precision here.
	(my_friendly_assert): Cast expression to void.
	* semantics.c (do_poplevel): Initialize scope_stmts.

f:
	* expr.c (ffeexpr_finished_): Cast signed side of ?:
	expression to bool.

java:
	* class.c (build_dtable_decl): Initialize dummy.

intl:
	* dcgettext.c (find_msg): Initialize act before loop.
	(guess_category_value): Add dummy uses of both parameters.
	* localealias.c (read_alias_file): Cast arg of strchr to char *.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35427 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,17 @@
+2000-08-02  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* c-common.h: Prototype min_precision and c_build_qualified_type here...
+	* c-tree.h: ... not here.
+	* errors.h: Prototype fancy_abort.
+
+	* emit-rtl.c (gen_lowpart_common): Move variable 'c' into
+	HOST_BITS_PER_WIDE_INT == 64 ifdef block.
+	* regrename.c (regrename_optimize): Make control flow explicit.
+	(replace_reg_in_block): Initialize reg_use to 0.
+
+	* i386.c (legitimate_address_p): Rename error label to
+	report_error to avoid namespace clash.
+
 2000-08-02  Kazu Hirata  <kazu@hxi.com>
 
 	* fold-const.c: Fix formatting.
