--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-02  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* expr.c (ffeexpr_finished_): Cast signed side of ?:
+	expression to bool.
+
 2000-07-31  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* lang-specs.h: Rename cpp to cpp0 and/or tradcpp to tradcpp0.
