--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-02  Manfred Hollstein  <manfredh@redhat.com>
+
+	* configure.in: Re-enable all references to libg++ and librx.
+
 2000-08-01  Alexandre Oliva  <aoliva@redhat.com>
 
 	* ltconfig, ltmain.sh: Update from libtool multi-language branch.
