--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-02  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20000802-1.c: New test.
+
 2000-08-02  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.dg/cpp/macsyntx.c: Fix error regexp.
