--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-02  Geoff Keating  <geoffk@cygnus.com>
+
+	* lib/objc.exp (objc_target_compile): Look for libobjc.a in
+	libobjc/.libs to allow for libtool.
+
 2000-08-02  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20000802-1.c: New test.
