--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-08-02  Mark Mitchell  <mark@codesourcery.com>
+
+	* dce.c: Remove all uses of assert.
+	* dwarf2out.c: Likewise.
+	* dwarfout.c: Likewise.
+	* ssa.c: Likewise.
+
 2000-08-02  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.h (lang_specific_driver): Constify second argument.
