Workaround for -fssa testsuite failures. 	* config/ia64/ia64-protos.h (flag_ssa): Declare. 	* config/ia64/ia64.md (movti_internal, movti_internal+1): New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35439 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-02  Jim Wilson  <wilson@cygnus.com>
+
+	* config/ia64/ia64-protos.h (flag_ssa): Declare.
+	* config/ia64/ia64.md (movti_internal, movti_internal+1): New.
+
 2000-08-02  Mark Mitchell  <mark@codesourcery.com>
 
 	* dce.c: Remove all uses of assert.
