--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -551,6 +551,26 @@
   "addl %0 = @ltoff(%1), gp"
   [(set_attr "type" "A")])
 
+;; ??? These patterns exist to make SSA happy.  We can get TImode values
+;; because of structure moves generated for parameter and return value
+;; loads and stores.
+
+(define_insn "*movti_internal"
+  [(set (match_operand:TI 0 "register_operand" "=r")
+	(match_operand:TI 1 "register_operand" "r"))]
+  "flag_ssa"
+  "#"
+  [(set_attr "type" "unknown")
+   (set_attr "predicable" "no")])
+
+(define_split
+  [(set (match_operand:TI 0 "register_operand" "")
+	(match_operand:TI 1 "register_operand" ""))]
+  "flag_ssa && reload_completed"
+  [(set (subreg:DI (match_dup 0) 0) (subreg:DI (match_dup 1) 0))
+   (set (subreg:DI (match_dup 0) 1) (subreg:DI (match_dup 1) 1))]
+  "")
+
 ;; Floating Point Moves
 ;;
 ;; Note - Patterns for SF mode moves are compulsory, but
