--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-02  Alexandre Oliva  <aoliva@redhat.com>
+
+	* configure.in (CHILL_FOR_TARGET, CXX_FOR_TARGET): Convert blanks to
+	commas in $LANGUAGES.
+
 2000-08-02  Manfred Hollstein  <manfredh@redhat.com>
 
 	* configure.in: Re-enable all references to libg++ and librx.
