--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-03  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* Makefile.am: Make inner class CNI headers depend on libgcj.zip only.
+	Fixes "make -j" builds.
+	* Makefile.in: Rebuild.
+
 2000-08-02  Tom Tromey  <tromey@cygnus.com>
 
 	* Makefile.in: Rebuilt.
