--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu Aug  3 01:05:32 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* pa.md (shadd height reduction patterns/splitters): Remove.
+
 2000-08-02  Jim Wilson  <wilson@cygnus.com>
 
 	* config/ia64/ia64-protos.h (flag_ssa): Declare.
