--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-03  Kazu Hirata  <kazu@hxi.com>
+
+	* toplev.c: Fix formatting.
+
 Thu Aug  3 01:05:32 2000  Jeffrey A Law  (law@cygnus.com)
 
 	* flow.c (find_auto_inc): Verify that we've got a REG before
