--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2000-08-03  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.c-torture/execute/20000801-3.c, gcc.c-torture/20000801-4.c:
+	New tests.
+	* gcc.c-torture/execute/20000801-3.x, gcc/c-torture/20000801-4.x:
+	Xfail.
+
 2000-08-02  Geoff Keating  <geoffk@cygnus.com>
 
 	* lib/objc.exp (objc_target_compile): Look for libobjc.a in
