--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Thu Aug  3 01:46:33 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* gcc.c-torture/compile/20000803-1.c: New test.
+
 2000-08-03  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.c-torture/execute/20000801-3.c, gcc.c-torture/20000801-4.c:
