--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-03  David Billinghurst  <David.Billinghurst@riotinto.com.au>
+
+	* config/i386/cygwin.h: Remove -remap from CPP_SPEC since this option
+	is not supported by tradcpp and isn't actually needed for cygwin.
+
 2000-08-03  Kazu Hirata  <kazu@hxi.com>
 
 	* toplev.c: Fix formatting.
