--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Aug  3 15:53:03 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	From SAITOH Masanobu:
+	* sh.h (ASM_OUTPUT_REG_PUSH): Fix syntax.
+
 2000-08-03  David Billinghurst  <David.Billinghurst@riotinto.com.au>
 
 	* config/i386/cygwin.h: Remove -remap from CPP_SPEC since this option
