--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-03  Michael Poole  <poole@troilus.org>
+
+        * tm.texi (Register Classes): Clarify order of sub-initializers
+        in REG_CLASS_CONTENTS.
+
 Thu Aug  3 15:53:03 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 	From SAITOH Masanobu:
