* gengenrtl.c, rtl.c: Avoid #elif.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35456 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu Aug  3 10:05:53 2000  Akiko Matsushita <matusita@sra.co.jp>
+
+	* gengenrtl.c, rtl.c: Avoid #elif.
+
 2000-08-03  Michael Poole  <poole@troilus.org>
 
         * tm.texi (Register Classes): Clarify order of sub-initializers
