--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-03  Nick Clifton  <nickc@cygnus.com>
+
+	* dwarf2.h (DW_LANG_Java): Change value to 0x000b.
+	* dwarf.h (LANG_JAVA): Change value to 0x000b.
+
 2000-08-03  Anthony Green  <green@cygnus.com>
 
 	* dwarf2out.c (gen_compile_unit_die): Add java language support.
