* extend.texi: Fix typo in last change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35466 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2000-08-03  Mark Mitchell  <mark@codesourcery.com>
 
+	* extend.texi: Fix typo in last change.
+
 	* extend.texi: Add commentary on statement-expressions and their
 	interactions with C++.
 
